--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,10 +4,26 @@
     android:id="@+id/home_drawer_layout">
 
     <!-- The main content view -->
-    <FrameLayout
-        android:id="@+id/home_content"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.Toolbar
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:id="@+id/home_toolbar"/>
+
+        <com.example.safet.custom.SlidingTabLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:id="@+id/home_sliding_tab" />
+
+        <android.support.v4.view.ViewPager
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:id="@+id/home_pager" />
+    </LinearLayout>
 
     <!-- The navigation drawer -->
     <LinearLayout
