--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,50 +1,56 @@
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:id="@+id/home_drawer_layout">
+    android:orientation="vertical">
 
-    <!-- The main content view -->
-    <LinearLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/home_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content" />
 
-        <android.support.v7.widget.Toolbar
-            android:layout_height="wrap_content"
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/home_drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <!-- The main content view -->
+        <LinearLayout
             android:layout_width="match_parent"
-            android:id="@+id/home_toolbar"/>
-
-        <com.example.safet.custom.SlidingTabLayout
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:id="@+id/home_sliding_tab" />
-
-        <android.support.v4.view.ViewPager
             android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:id="@+id/home_pager" />
-    </LinearLayout>
+            android:orientation="vertical">
 
-    <!-- The navigation drawer -->
-    <LinearLayout
-        android:id="@+id/home_drawer"
-        android:layout_gravity="start"
-        android:layout_height="match_parent"
-        android:layout_width="@dimen/home_drawer"
-        android:background="@android:color/white"
-        android:padding="@dimen/activity_padding"
-        android:orientation="vertical">
+            <com.example.safet.custom.SlidingTabLayout
+                android:id="@+id/home_sliding_tab"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-        <Button
-            android:id="@+id/home_setting"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/home_setting" />
+            <android.support.v4.view.ViewPager
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/home_pager" />
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/home_logout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/home_logout" />
-    </LinearLayout>
-</android.support.v4.widget.DrawerLayout>
+        <!-- The navigation drawer -->
+        <LinearLayout
+            android:id="@+id/home_drawer"
+            android:layout_gravity="start"
+            android:layout_height="match_parent"
+            android:layout_width="@dimen/home_drawer"
+            android:background="@android:color/white"
+            android:padding="@dimen/activity_padding"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/home_setting"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/home_setting" />
+
+            <Button
+                android:id="@+id/home_logout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/home_logout" />
+        </LinearLayout>
+    </android.support.v4.widget.DrawerLayout>
+</LinearLayout>
