--- a/app/src/main/res/layout/fragment_saviour.xml
+++ b/app/src/main/res/layout/fragment_saviour.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent">
 
     <Button
-        android:id="@+id/home_add_saviour"
+        android:id="@+id/saviour_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="@string/home_add_saviour" />
+        android:text="@string/saviours_add" />
 </RelativeLayout>
