Added saviour list, added widget for triggering panic, add saviour module, location upload module

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -41,6 +41,12 @@
             android:orientation="vertical">
 
             <Button
+                android:id="@+id/home_trigger"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/home_trigger" />
+
+            <Button
                 android:id="@+id/home_setting"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
